--- a/style.css
+++ b/style.css
@@ -1,36 +1,64 @@
 *{
-    padding: 0;
     margin: 0;
-    border: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 body{
-    height: 10000px;
+    height: 100vh;
+    background-color: black;
 }
-.no-scroll{
-    overflow: hidden; 
-    /* (переповнення контенту) */
-}
-.backdrop{
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background-color:  rgba(0, 0, 0, 0.5);
-    opacity: 1;
-}
-.backdrop.is-hidden{
-opacity: 0;
-pointer-events: none;
-/* курсор подія(блокування подій мишки (відповідає ця властивість)) */
-}
-.modal{
+.box{
+    width: 200px;
+    height: 200px;
+    background-color: green;
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 528px;
-height: 581px;
-background-color: blue;
-transform: translate(-50%, -50%);
+    transform: translate(-50%,-50%);
+
+    transition-property: background-color, transform;
+    /* властивість елементу яку ми бажаємо анімквати */
+    /* перехід властивостей */
+     /*які властивості будемо анмувати, all перехід всіх властивостей */
+
+    transition-duration: 1s;
+    /* тривалість css переходу */
+    /* 300ms = .3s */
+
+    transition-timing-function: cubic-bezier(.28,1.41,.52,-0.61);
+    /* влістивість яка дозволяє нам розказати елементу поведінку елемента під часу руха з точки A у точку B */
+    /* linear, ease-in, ease-in-out */
+
+    transition-delay: 2s;
+    /* затримка перед css переходу (виконанням анімації) */
+     
+
+    /* transition-property transition-duration  transition-timing-function */
+    /* transition: background-color, transform 5s, cubic-bezier(.28,1.41,.52,-0.61); */
+}
+.box:hover{
+    background-color: coral;
+    transform: translate(-30%, -30%);
+}
+
+.box2{
+    width: 200px;
+    height: 200px;
+    background-color: yellow;
+    position: absolute;
+    top: 30%;
+    left: 30%;
+    transform: translate(-30%,-30%);
+    
+    
+    transform: scale(-0.5, -2);
+    /* scale дозволяє масштабувати елемент(зменшити, збільшити) */
+    /* transform: scale(x,y); x-ширина y-довжина */
+
+    transform: rotate(80deg);
+    /* rotate дозволяє обертати елемент на певну к-ть градусів */
+    /* градус(deg) */
+
+    transform: skew(5deg, 8deg);
+
 }
