--- a/style.css
+++ b/style.css
@@ -7,6 +7,12 @@
 body{
     height: 10000px;
 }
+ul,ol{
+    list-style: none;
+}
+a{
+    text-decoration: none;
+}
 .no-scroll{
     overflow: hidden; 
     /* (переповнення контенту) */
@@ -19,12 +25,23 @@ body{
     left: 0;
     background-color:  rgba(0, 0, 0, 0.5);
     opacity: 1;
+    /* transition-property: ;
+    transition: opacity 0.5s, cubic-bezier(0.075, 0.82, 0.165, 1); */
+    /* visibility: visible; */
 }
 .backdrop.is-hidden{
 opacity: 0;
 pointer-events: none;
 /* курсор подія(блокування подій мишки (відповідає ця властивість)) */
+visibility: hidden;
+/* бачиність елемента (hidden не бачить) */
 }
+
+/* .backdrop.is-hidden .modal{
+    transform: translate(-50%,-50%) scale(0);
+    transition: transform 0.5s cubic-bezier(0.19, 1, 0.22, 1) 0.3s;
+} */
+
 .modal{
     position: absolute;
     top: 50%;
@@ -32,5 +49,13 @@ pointer-events: none;
     width: 528px;
 height: 581px;
 background-color: blue;
-transform: translate(-50%, -50%);
+/* transform: translate(-50%, -50%) scale(1);
+transition: opacity 0.5s, cubic-bezier(0.075, 0.82, 0.165, 1) 1s, visibility 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.5s; */
+
+
+}
+
+
+.div{
+    margin-top: 1000px;
 }
