--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,8 +2,10 @@
 @import "./utils/placeholders";
 @import "./utils/mixin";
 @import "./components/body";
+@import "./components/button";
 @import "./components/hero";
 @import "./components/adventages";
+
 @import "./components/chill";
 @import "./components/div";
 @import "./components/our-project";
