--- a/sass/utils/_root.scss
+++ b/sass/utils/_root.scss
@@ -3,6 +3,10 @@
     --accent-color:blue;
     --svg-color:yellow;
     --svg-hover-color:green;
+    
 }
 
+
+$button-text:grey;
+$button-color:red;
 // vars = variable  
