--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,14 @@
   --svg-hover-color:green;
 }
 
+.error, .warning, .true {
+  width: 216px;
+  height: 50px;
+  border-radius: 4px;
+  background: #2196F3;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+}
+
 body {
   width: 1000px;
   height: 1000px;
@@ -15,10 +23,40 @@ body:hover {
   background-color: aqua;
 }
 
+.true {
+  background-color: green;
+}
+
+.warning {
+  background-color: orange;
+}
+
+.error {
+  background-color: black;
+}
+
 .hero-heading {
   font-size: 60px;
   text-transform: uppercase;
   color: var(--main-color);
+}
+
+.error {
+  background-color: red;
+}
+
+.hero {
+  border: 5px solid red;
+  border-radius: 20px;
+  width: 100px;
+  height: 600px;
+}
+
+.adventages {
+  width: 100%;
+  height: 600px;
+  border: 5px dashed green;
+  border-radius: 20px;
 }
 
 div {
@@ -33,4 +71,10 @@ div::-moz-selection {
 }
 div::selection {
   background-color: yellowgreen;
+}
+
+.chill-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
