--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,11 +1,31 @@
-.button{
-    // extend = наслідування
-    @extend %button;
+// .button{
+//     extend = наслідування
+//     @extend %button;
     
-    // background-color: ;
-    background-color: $button-text;
-    color: $button-color;
-    // width: 200px;
-    // height: 100px;
-    // border-radius: 10px;
+//     background-color: ;
+//     background-color: $button-text;
+//     color: $button-color;
+//     width: 200px;
+//     height: 100px;
+//     border-radius: 10px;
+// }
+// .button{
+//     width: 216px;
+//     height: 50px;
+//     border-radius: 4px;
+// background: #2196F3;
+
+// box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+// }
+.true{
+    @extend %button;
+    background-color: green;
+}
+.warning{
+    @extend %button;
+    background-color: orange;
+}
+.error{
+    @extend %button;
+    background-color: black;
 }
