--- a/sass/utils/_root.scss
+++ b/sass/utils/_root.scss
@@ -7,6 +7,8 @@
 }
 
 
+
+// глобальна область бачимості = змінна не обмежена фігурними дужками 
 $button-text:grey;
 $button-color:red;
 // vars = variable  
