--- a/sass/components/_red.scss
+++ b/sass/components/_red.scss
@@ -4,8 +4,8 @@
     background-color: red;
     height: 500px;
 
-//    @media = дуруктива яка дозволяє нам оголосити медіа првило для адаптації
-// screen = пурувіряє чи запускається наш сайт на кольоровому екрані
+//    @media = дериктива яка дозволяє нам оголосити медіа првило для адаптації
+// screen = перевіряє чи запускається наш сайт на кольоровому екрані
 // print = дозволяє робити адаптацію під прінтер, факс тощо.
 // логічний оператор I(and) вказує на те що ми використовуємо дві перевірки
 //   (min-width:320px) = ми вказуємо мінімальну ширину екрану на якій мають з'явитися стилі які ми запишемо у цьому правилі
