--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,9 +1,8 @@
 @import "./utils/root";
+@import "./utils/reset";
 @import "./utils/placeholders";
 @import "./utils/mixin";
-@import "./utils/root";
-@import "./utils/reset";
 
-@import "./components/inputs";
-@import "./components/red";
 @import "./components/retina";
+@import "./components/red";
+@import "./components/hero";
