--- a/css/index.css
+++ b/css/index.css
@@ -68,8 +68,51 @@ img {
   }
 }
 
-.hero {
-  width: 100vw;
-  height: 700px;
-  background-image: url(../../assets/imgs/hero/hero-1x.webp);
+.container {
+  max-width: 935px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+
+.list-hero {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 130px 65px;
+}
+
+.item-hero {
+  width: 420px;
+}
+
+.picture-hero {
+  margin-bottom: 62px;
+}
+
+.p-hero {
+  font-family: Ubuntu;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+  margin-bottom: 32px;
+  color: #B4AD9E;
+}
+
+.title-hero {
+  font-family: "Playfair Display";
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-bottom: 40px;
+  color: #626262;
+}
+
+.text-hero {
+  font-family: "Playfair Display";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  color: #626262;
 }
